--- a/Udacity_bike_sharing_project_new.ipynb
+++ b/Udacity_bike_sharing_project_new.ipynb
@@ -609,7 +609,7 @@
     "# Fill in your user name and key from creating the kaggle account and API token file\n",
     "import json\n",
     "kaggle_username = \"afrozshah\"\n",
-    "kaggle_key = \"92b45115ae2b476641222c3cbb00ca07\"\n",
+    "kaggle_key = \"################\"\n",
     "\n",
     "# Save API token the kaggle.json file\n",
     "with open(\"/root/.kaggle/kaggle.json\", \"w\") as f:\n",
